# hayate

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yml
crates/bot/: Cargo.toml
crates/bot/src/: lib.rs  main.rs
crates/bot/src/collector/: bybit.rs  bybit_collector.rs  mod.rs  paper_collector.rs
crates/bot/src/core/: market_making_with_dynamic_spread.rs  mod.rs  simple_market_making.rs
crates/bot/src/executor/: mod.rs  paper_executor.rs
crates/bot/src/models/: action.rs  common.rs  decimal.rs  event.rs  indicator.rs  indicators.rs  mod.rs  order.rs  order_collection.rs  orderbook.rs  position.rs
crates/bot/src/models/indicators/: natr.rs  rsi.rs
crates/bot/src/paper_trade/: mod.rs  paper_exchange.rs  types.rs
crates/bot/src/state/: mod.rs  orderbook.rs  pending_orders.rs  position.rs  price.rs
crates/clients/: Cargo.toml
crates/clients/examples/: bybit.rs
crates/clients/src/: lib.rs
crates/clients/src/bybit/: client.rs  types.rs
crates/hayate-core/: Cargo.toml
crates/hayate-core/src/: lib.rs  mappers.rs  run.rs  traits.rs
crates/transport/: Cargo.toml
crates/transport/src/: http.rs  lib.rs  ws.rs
