[workspace]
members  = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27.0"
tokio-stream = "0.1.17"
futures = "0.3.31"
futures-util = "0.3.31"
async-trait = "0.1.88"
tracing = "0.1.41"
reqwest = { version = "0.12.22" }