[workspace]
members  = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
transport = { path = "crates/transport" }
hayate-core = { path = "crates/hayate-core" }
clients = { path = "crates/clients" }

anyhow = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
tokio-stream = { version = "0.1.10", features = ["sync"] }
tokio-util = "0.7.15"
futures = "0.3.31"
futures-util = "0.3.31"
async-trait = "0.1.88"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
reqwest = { version = "0.12.22" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"