[package]
name = "bot"
edition.workspace = true
version.workspace = true

[dependencies]
hayate-core.workspace = true
clients.workspace = true

anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
chrono.workspace = true