[package]
name = "clients"
edition.workspace = true
version.workspace = true

[dependencies]
transport.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true