[package]
name = "transport"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true